:recycle: Add README.md. Refactor AndroidManifest.xml, MainActivity.kt, PastaFragment.kt, TopFragment.kt, CaptionedImagesAdapter.kt, Pizza.kt, build.gradle, gradle.properties, and gradle-wrapper.properties files.
Signed-off-by: Dmytro Turskyi <dmytro.turskyi@gmail.com>

--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -67,8 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
+        android:contentDescription="@string/content_description_button"
         android:onClick="onClickDone"
-        android:src="@drawable/ic_done_white_24dp"
-        android:contentDescription="@string/content_description_button" />
+        android:src="@drawable/ic_done_white_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
